--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.3.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'com.palantir.docker' version '0.25.0'
+	id 'com.palantir.docker-run' version '0.25.0'
 }
 
 group = 'com.example'
@@ -23,4 +25,19 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+String imageName ="rampravesh07/jenkins-api-demo:${version}"
+
+docker{
+	name imageName
+	files "build/libs/${bootJar.archiveFileName.get()}"
+	buildArgs([JAR_FILE: bootJar.archiveFileName.get()])
+}
+
+dockerRun{
+	name project.name
+	image imageName
+	ports '8081:8081'
+	clean true
 }
